--- a/test/curl/crd-workflow/smoke.yaml
+++ b/test/curl/crd-workflow/smoke.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: curl
+    category: api-testing
 spec:
   container:
     resources:
@@ -26,6 +27,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: curl
+    category: api-testing
 spec:
   pod:
     imagePullSecrets:
@@ -50,6 +52,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: curl
+    category: api-testing
 spec:
   container:
     resources:
