--- a/test/examples/cloud-demo/test-workflows/jmeter.yaml
+++ b/test/examples/cloud-demo/test-workflows/jmeter.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: jmeter-report
   labels:
+    category: performance-testing
     artifacts: "true"
 spec:
   content:
