--- a/test/examples/cloud-demo/test-workflows/postman.yaml
+++ b/test/examples/cloud-demo/test-workflows/postman.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: postman-test
   labels:
+    category: api-testing
     core-tests: workflows
 spec:
   content:
