--- a/test/examples/showcase/crd.yaml
+++ b/test/examples/showcase/crd.yaml
@@ -4,6 +4,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: combined-workflows-suite
   labels:
+    category: platform-features
     demo: showcase-2
     workflow-suite: "true"
 spec:
@@ -33,6 +34,7 @@ kind: TestWorkflow
 metadata:
   name: k6-distributed # ShowCase 2
   labels:
+    category: platform-features
     demo: showcase-2
     artifacts: report
     junit: "true"
@@ -96,6 +98,7 @@ kind: TestWorkflow
 metadata:
   name: cypress-browsers-matrix
   labels:
+    category: platform-features
     demo: showcase-3
     junit: "true"
 spec:
@@ -150,6 +153,7 @@ kind: TestWorkflow
 metadata:
   name: curl-with-nginx-service
   labels:
+    category: platform-features
     demo: showcase-4
 spec:
   container:
@@ -179,6 +183,7 @@ kind: TestWorkflow
 metadata:
   name: cypress-video-recording
   labels:
+    category: platform-features
     demo: showcase-5
     artifacts-video: "true"
 spec:
@@ -224,6 +229,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: postman-junit-report
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
 spec:
@@ -256,6 +262,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: cypress-junit-report
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
 spec:
@@ -302,6 +309,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: junit5-junit
   labels:
+    category: platform-features
     demo: showcase-6
     artifacts-report: "true"
     junit: "true"
@@ -334,6 +342,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: junit5-mixed-results-failures-junit-report
   labels:
+    category: platform-features
     demo: showcase-6
     artifacts-report: "true"
     junit: "true"
@@ -367,6 +376,7 @@ kind: TestWorkflow
 metadata:
   name: pytest-junit
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
 spec:
@@ -401,6 +411,7 @@ kind: TestWorkflow
 metadata:
   name: pytest-mixed-results-failures-junit-report
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
     expected-fail: "true"
@@ -436,6 +447,7 @@ kind: TestWorkflow
 metadata:
   name: nunit-junit-report
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
 spec:
@@ -467,6 +479,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: playwright-workflow-smoke-junit
   labels:
+    category: platform-features
     demo: showcase-6
     junit: "true"
 spec:
@@ -536,6 +549,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: trigger-remote-workflow-with-template
   labels:
+    category: platform-features
     demo: showcase-9
 spec:
   steps:
