--- a/test/integration/crd-workflow/testkube-integration-tests.yaml
+++ b/test/integration/crd-workflow/testkube-integration-tests.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: testkube-integration
   labels:
+    category: platform-features
     core-tests: workflows
 spec:
   config:
