--- a/test/maven/crd-workflow/smoke.yaml
+++ b/test/maven/crd-workflow/smoke.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: maven
+    category: build-integration
 spec:
   content:
     git:
@@ -36,6 +37,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: maven
+    category: build-integration
 spec:
   content:
     git:
