--- a/test/nunit/crd-workflow/crd.yaml
+++ b/test/nunit/crd-workflow/crd.yaml
@@ -7,6 +7,7 @@ metadata:
     tool: nunit
     artifacts: "true"
     junit: "true"
+    category: unit-component-testing
 spec:
   content:
     git:
