--- a/test/special-cases/edge-cases-expected-fails-additional.yaml
+++ b/test/special-cases/edge-cases-expected-fails-additional.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-high-parallel-step-failed-sync-paused
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of 20 parallel steps failed (last), synced parallel (paused: true)"
 spec:
@@ -35,6 +36,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-high-parallel-first-step-failed-sync-paused
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of 20 parallel steps failed (last), synced parallel (paused: true)"
 spec:
@@ -67,6 +69,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-high-parallel-step-failed
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of 20 parallel steps failed (last)"
 spec:
