--- a/test/special-cases/special-cases-additional.yaml
+++ b/test/special-cases/special-cases-additional.yaml
@@ -4,6 +4,7 @@ kind: TestWorkflow
 metadata:
   name: special-cases-long-lasting-30m
   labels:
+    category: platform-features
     core-tests: special-cases
 description: "Long lasting workflow - 30 minutes"
 spec:
@@ -20,6 +21,7 @@ kind: TestWorkflow
 metadata:
   name: special-cases-long-lasting-90m
   labels:
+    category: platform-features
     core-tests: special-cases
 description: "Long lasting workflow - 90 minutes"
 spec:
@@ -36,6 +38,7 @@ kind: TestWorkflow
 metadata:
   name: special-cases-long-lasting-sleep-90m
   labels:
+    category: platform-features
     core-tests: special-cases
 description: "Long lasting workflow - 90 minutes sleep + echo in the end"
 spec:
@@ -49,6 +52,7 @@ kind: TestWorkflow
 metadata:
   name: special-cases-service-name-with-dash  # only . notation is supported (https://linear.app/kubeshop/issue/TKC-4047/)
   labels:
+    category: platform-features
     core-tests: special-cases
 description: "Service name with dash"
 spec:
