--- a/test/suites/cron/dev/cloud-ui-e2e-cron.yaml
+++ b/test/suites/cron/dev/cloud-ui-e2e-cron.yaml
@@ -3,6 +3,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: cloud-ui-e2e-cron-trigger
   labels:
+    category: platform-features
     core-tests: workflows-suite-trigger
     type: workflow-trigger
 spec:
