--- a/test/examples/cloud-demo/test-workflows/playwright.yaml
+++ b/test/examples/cloud-demo/test-workflows/playwright.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: playwright
   labels:
+    category: e2e-ui-testing
     core-tests: workflows
     artifacts: "true"
 spec:
