--- a/test/examples/kubecon/test-workflows/gradle.yaml
+++ b/test/examples/kubecon/test-workflows/gradle.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: gradle-java-test
   labels:
+    category: build-integration
     core-tests: workflows
 spec:
   content:
