--- a/test/examples/kubecon/test-workflows/k6.yaml
+++ b/test/examples/kubecon/test-workflows/k6.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: k6-loadtest
   labels:
+    category: performance-testing
     artifacts: "true"
 spec:
   content:
