--- a/test/junit/crd-workflow/smoke.yaml
+++ b/test/junit/crd-workflow/smoke.yaml
@@ -6,6 +6,7 @@ metadata:
     core-tests: workflows
     tool: junit
     artifacts: "true"
+    category: unit-component-testing
 spec:
   content:
     git:
@@ -36,6 +37,7 @@ metadata:
   labels:
     core-tests: expected-fail
     artifacts: "true"
+    category: unit-component-testing
 spec:
   content:
     git:
@@ -66,6 +68,7 @@ metadata:
   labels:
     core-tests: expected-fail
     artifacts: "true"
+    category: unit-component-testing
 spec:
   content:
     git:
