--- a/test/playwright/crd-workflow/smoke.yaml
+++ b/test/playwright/crd-workflow/smoke.yaml
@@ -8,6 +8,7 @@ metadata:
     artifacts: "true"
     junit: "true"
     playwright-traces: "on"
+    category: e2e-ui-testing
 spec:
   content:
     git:
@@ -50,6 +51,7 @@ metadata:
     core-tests: workflows
     tool: playwright
     artifacts: "true"
+    category: e2e-ui-testing
 spec:
   content:
     git:
@@ -100,6 +102,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: playwright
+    category: e2e-ui-testing
 spec:
   container:
     resources:
@@ -132,6 +135,7 @@ metadata:
     core-tests: workflows
     tool: playwright
     artifacts: "true"
+    category: e2e-ui-testing
 spec:
   content:
     git:
@@ -178,6 +182,7 @@ metadata:
     tool: playwright
     artifacts: "true"
     junit: "true"
+    category: e2e-ui-testing
 description: "Distributed Playwright with `--shard` - 2 browsers/projects, so it may *seem* things are executed twice"
 spec:
   content:
