--- a/test/special-cases/edge-cases-expected-fails.yaml
+++ b/test/special-cases/edge-cases-expected-fails.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-incorrect-repo-path
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: default no-cone mode
 spec:
@@ -40,6 +41,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-incorrect-repo-path-cone-mode
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -77,6 +79,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-incorrect-image-name
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -113,6 +116,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-incorrect-workingdir
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -151,6 +155,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-resource-limits # OOMKilled
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -189,6 +194,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-cypress-artifacts-condition-always-with-artifacts
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -223,6 +229,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-k6-test-report-condition-always-no-artifacts
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -260,6 +267,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-timeout-activedeadlineseconds
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   job:
@@ -294,6 +302,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-timeout-step
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -329,6 +338,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-private-registry-auth
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   container:
@@ -347,6 +357,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-private-repo-auth
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -376,6 +387,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-missing-git-secret
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   content:
@@ -409,6 +421,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-missing-template
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   job:
@@ -432,6 +445,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-service-exit-code # https://linear.app/kubeshop/issue/TKC-3897/
   labels:
+    category: platform-features
     core-tests: expected-fail
 spec:
   container:
@@ -456,6 +470,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-step-retry
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "step retry (until step failed)"
 spec:
@@ -478,6 +493,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-negative-step
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "negative step passed - inverting step result to failed"
 spec:
@@ -496,6 +512,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-volume-not-mounted
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "volumeMount references missing volume"
 spec:
@@ -526,6 +543,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-template-missing-config-options
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "Required template config missing"
 spec:
@@ -539,6 +557,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-template-not-defined-config-options
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "Not defined template config params passed"
 spec:
@@ -555,6 +574,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-service-readiness-probe
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "Service with failing readiness probe"
 spec:
@@ -577,6 +597,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-conditional-step-failed
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "conditional step failed"
 spec:
@@ -594,6 +615,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-parallel-step-failed
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of parallel steps failed"
 spec:
@@ -625,6 +647,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-parallel-step-timed-out
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of parallel steps timed out"
 spec:
@@ -657,6 +680,7 @@ kind: TestWorkflow
 metadata:
   name: expected-fail-parallel-oomkilled
   labels:
+    category: platform-features
     core-tests: expected-fail
 description: "one of parallel steps oomkilled"
 spec:
