--- a/test/suites/cron/dev/testkube-oss-suite-cron.yaml
+++ b/test/suites/cron/dev/testkube-oss-suite-cron.yaml
@@ -3,6 +3,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: testkube-oss-workflow-suite-cron-trigger
   labels:
+    category: platform-features
     core-tests: workflows-suite-trigger
     type: suite-trigger
     tool: testkube-oss
