--- a/test/suites/cron/prod/small-suite-cron.yaml
+++ b/test/suites/cron/prod/small-suite-cron.yaml
@@ -3,6 +3,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: tw-suite-small-smoke-cron-trigger
   labels:
+    category: platform-features
     core-tests: workflows-suite-trigger
     type: suite-trigger
 spec:
