--- a/test/suites/cypress-suite-small.yaml
+++ b/test/suites/cypress-suite-small.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: cypress-workflow-suite-small
   labels:
+    category: platform-features
     core-tests: workflows-suite
     type: suite
     tool: cypress
