--- a/test/suites/special-cases/standard-suite.yaml
+++ b/test/suites/special-cases/standard-suite.yaml
@@ -3,6 +3,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: tw-suite-standard-smoke
   labels:
+    category: platform-features
     core-tests: workflows-suite
     type: suite
 spec:
