--- a/test/suites/special-cases/testkube-installation-tests-suite.yaml
+++ b/test/suites/special-cases/testkube-installation-tests-suite.yaml
@@ -3,6 +3,7 @@ kind: TestWorkflow
 metadata:
   name: testkube-installation-tests-workflow-suite
   labels:
+    category: platform-features
     core-tests: workflows-suite
     type: suite
     tool: testkube
