--- a/test/testkube/oss-tests/oss-tests.yaml
+++ b/test/testkube/oss-tests/oss-tests.yaml
@@ -76,6 +76,7 @@ kind: TestWorkflow
 metadata:
   name: oss-tests-mongo
   labels:
+    category: platform-features
     core-tests: workflows
     tool: testkube-oss
     environment-specific: dev
@@ -98,6 +99,7 @@ kind: TestWorkflow
 metadata:
   name: oss-tests-postgres
   labels:
+    category: platform-features
     core-tests: workflows
     tool: testkube-oss
     environment-specific: dev
