--- a/test/testkube/ui-e2e/crd-workflow/cloud-ui-e2e.yaml
+++ b/test/testkube/ui-e2e/crd-workflow/cloud-ui-e2e.yaml
@@ -3,6 +3,7 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: cloud-ui-e2e
   labels:
+    category: platform-features
     core-tests: workflows
     artifacts: "true"
 spec:
