--- a/test/xunit/crd-workflow/smoke.yaml
+++ b/test/xunit/crd-workflow/smoke.yaml
@@ -7,6 +7,7 @@ metadata:
     tool: xunit
     artifacts: "true"
     junit: "true"
+    category: unit-component-testing
 spec:
   content:
     git:
