chore: remove platform-features category and change espresso workflows to be in e2e category

--- a/test/espresso/crd-workflow/smoke.yaml
+++ b/test/espresso/crd-workflow/smoke.yaml
@@ -11,7 +11,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: espresso
-    category: build-integration
+    category: e2e-ui-testing
 description: "Android emulator - K8s+KVM"
 spec:
   content:
