--- a/test/pact/pact-js-project/crd-workflow/smoke.yaml
+++ b/test/pact/pact-js-project/crd-workflow/smoke.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: pact
-    category: unit-component-testing
+    category: api-testing
 spec:
   content:
     git:
