--- a/test/suites/cron/dev/wizard-examples-suite.yaml
+++ b/test/suites/cron/dev/wizard-examples-suite.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     core-tests: workflows-suite
     type: workflow-suite
+description: "UI examples"
 spec:
   steps:
   - execute:
